--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,4 +1,113 @@
 ---
 ---
 
-@import "base";
+@use "base";
+
+.header {
+    height: 120px;
+    background: white;
+}
+
+.header-inner {
+    height: 100%;
+    margin: 0 auto;
+    width: 1300px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.logo {
+    flex-grow: 1;
+    margin-top: 15px;
+}
+
+.menu {
+    justify-self: flex-end;
+
+    > ul {
+        list-style: none;
+        display: flex;
+        flex-direction: row;
+
+        > li > a {
+            display: block;
+            color: black;
+            font-size: 21px;
+            padding: 0 30px;
+            text-decoration: none;
+            font-weight: 600;
+            position: relative;
+
+            &:hover,
+            &.active {
+                > .blocks {
+                    > div {
+                        visibility: visible;
+                        opacity: 1;
+                    }
+
+                    > .block-1 {
+                        transition-delay: 100ms;
+                    }
+
+                    > .block-2 {
+                        transition-delay: 50ms;
+                    }
+
+                    > .block-3 {
+                        transition-delay: 0;
+                    }
+
+                    > .block-4 {
+                        transition-delay: 50ms;
+                    }
+
+                    > .block-5 {
+                        transition-delay: 100ms;
+                    }
+                }
+            }
+
+            > .blocks {
+                pointer-events: none;
+                position: absolute;
+                top: 38px;
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+                margin: 0 auto;
+                height: 10px;
+                width: 80px;
+                left: calc(50% - 40px);
+
+                > div {
+                    height: 100%;
+                    background: #0086CC;
+                    flex-basis: 12.5%;
+                    border-radius: 1px;
+                    visibility: hidden;
+                    opacity: 0;
+                    transition: opacity 150ms ease, visibility 150ms linear;
+                }
+            }
+        }
+    }
+}
+
+.contact-button {
+    padding: 10px 40px;
+    background: #0086CC;
+    border-radius: 3px;
+    margin-left: 40px;
+    color: white;
+    font-size: 21px;
+    font-weight: 600;
+    text-decoration: none;
+}
+
+.well {
+    width: 100%;
+    background: no-repeat top right url("../well.png") #c6dae3;
+    height: 444px;
+}
