--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <title>{{ page.title }} - {{ site.title }}</title>
     <link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}">
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
   </head>
   <body>
     <div class="header">
@@ -99,12 +100,6 @@
         </a>
       </div>
     </div>
-
-    <div class="well">
-
-    </div>
-
-    {{ page.name }}
 
     {{ content }}
   </body>
